--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,481 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import url('https://fonts.googleapis.com/css2?family=Assistant:wght@200;300;400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Assistant:wght@200;300;400;500;600&family=Maven+Pro:wght@400;500;600;700;800&display=swap');
+@import '~video.js/dist/video-js.css';
+@import url('https://fonts.googleapis.com/css2?family=Assistant:wght@200;300;400;500;600&family=Maven+Pro:wght@400;500;600;700;800&family=Permanent+Marker&family=Shadows+Into+Light&display=swap');
+body {
+    font-family: 'Assistant', sans-serif;
+}
+.section-heading {
+    text-align: left;
+    color: #f17831;
+}
+
+
+
+.littlish-primary-button {
+    color: #f17831;
+}
+
+
+
+.header-wrapper {
+    padding: 20px 0;
+}
+.logo-part img {
+    width: 120px;
+}
+.nav-wrapper ul {
+    float: right;
+    margin-bottom: 0;
+    margin-top: 5px;
+}
+.nav-wrapper li {
+    display: inline-block;
+    padding: 5px 10px;
+    color: #f17831;
+    transition: all 1s ease 0s;
+}
+.nav-wrapper li:hover {
+    background: #000;
+    color: #fff;
+    cursor: pointer;
+    transition: all 1s ease 0s;
+}
+
+.header-content {
+    height: calc(100vh - 90px);
+    background: #f17831;
+    padding: 40px 0;
+    overflow: hidden;
+}
+.child-img {
+    float: right;
+    width: 50%;
+}
+.child-img img {
+    float: right;
+}
+.relative {
+    height: calc(100vh - 130px);
+}
+.title-wrapper {
+    color: #fff;
+    float: left;
+    width: 50%;
+    position: relative;
+    padding-top: 10%;
+}
+.top-title {
+    font-size: 72px;
+    animation-delay: 1s;
+}
+.bottom-titile {
+    font-size: 34px;
+    animation-delay: 1.8s;
+}
+
+/*******Need to modify******/
+
+.animation-text-wrapper {
+    transform: translateY(-50%);
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 59px;
+    font-weight: bold;
+    padding-top: 0;
+    position: relative;
+    left: 0;
+    width: auto;
+    top: 50%;
+    display: block;
+  }
+  
+  #flip {
+    height:80px;
+    overflow:hidden;
+  }
+  
+  #flip > div > div {
+    color: #fff;
+    padding: 4px 12px;
+    height: 78px;
+    margin-bottom: 0;
+    display: inline-block;
+  }
+  .text {
+    margin-top: -14px;
+    display: block;
+}
+  
+  #flip div:first-child {
+    animation: show 5s linear infinite;
+  }
+  
+  #flip div div {
+    background:#42c58a;
+  }
+  #flip div:first-child div {
+    background:#4ec7f3;
+  }
+  #flip div:last-child div {
+    background:#DC143C;
+  }
+  
+  @keyframes show {
+    0% {margin-top:-270px;}
+    5% {margin-top:-180px;}
+    33% {margin-top:-180px;}
+    38% {margin-top:-90px;}
+    66% {margin-top:-90px;}
+    71% {margin-top:0px;}
+    99.99% {margin-top:0px;}
+    100% {margin-top:-270px;}
+  }
+  
+/**********************/
+
+.serivce-block {
+    background: #f4fbf7;
+    width: 350px;
+    padding: 10px 20px;
+    margin: 20px;
+    border-radius: 10px;
+    overflow: hidden;
+    float: left;
+}
+.serivce-icon-block {
+    width: 70px;
+    float: left;
+    text-align: center;
+}
+.service-content {
+    padding: 20px 0;
+    float: left;
+    width: calc(100% - 70px);
+}
+.image-circke {
+    background: #d5f3e1;
+    width: 50px;
+    height: 50px;
+    margin-top: 20px;
+    border-radius: 50%;
+    position: relative;
+}
+.image-circke img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.service-content p {
+    font-size: 12px;
+}
+
+.services-block-wrapper {
+    display: flex;
+    margin: 0 auto;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 60px 0;
+}
+
+.delay-1 {
+    animation-delay: 0.5s;
+}
+.delay-2 {
+    animation-delay: 1s;
+}
+.delay-3 {
+    animation-delay: 1.5s;
+}
+.delay-4 {
+    animation-delay: 2s;
+}
+
+.video-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding-bottom: 80px;
+}
+.video-wrapper .video-js .vjs-big-play-button {
+    font-size: 3em;
+    line-height: 1.5em;
+    height: 1.63332em;
+    width: 80px;
+    height: 80px;
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    padding: 0;
+    cursor: pointer;
+    opacity: 1;
+    border: 10px solid rgba(225,225,225,0.5);
+    background-color: rgba(241, 120, 45, 0.7);
+    border-radius: 50%;
+    transition: all 0.4s;
+    transform: translate(-50%, -50%);
+}
+
+.video-wrapper .video-js .vjs-big-play-button .vjs-icon-placeholder:before {
+    content: "\f101";
+    margin-top: 7px;
+}
+
+.video-wrapper .video-js:hover .vjs-big-play-button,.video-wrapper .video-js .vjs-big-play-button:focus {
+    border-color: rgba(225,225,225,0.5);;
+    background-color: #73859f;
+    /* background-color: rgba(115, 133, 159, 0.5); */
+    transition: all 0s;
+}
+.video-wrapper .vjs-playing .vjs-big-play-button {
+    display: none;
+}
+
+.sub-heading {
+    text-align: center;
+    display: block;
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+/* Slider */
+
+.slick-slide {
+    margin: 0px 20px;
+}
+
+.slick-slide img {
+    width: 100%;
+}
+
+.slick-slider
+{
+    position: relative;
+    display: block;
+    box-sizing: border-box;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+            user-select: none;
+    -webkit-touch-callout: none;
+    -khtml-user-select: none;
+    -ms-touch-action: pan-y;
+        touch-action: pan-y;
+    -webkit-tap-highlight-color: transparent;
+    padding: 20px 0 40px;
+}
+
+.slick-list
+{
+    position: relative;
+    display: block;
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+}
+.slick-list:focus
+{
+    outline: none;
+}
+.slick-list.dragging
+{
+    cursor: pointer;
+    cursor: hand;
+}
+
+.slick-slider .slick-track,
+.slick-slider .slick-list
+{
+    -webkit-transform: translate3d(0, 0, 0);
+       -moz-transform: translate3d(0, 0, 0);
+        -ms-transform: translate3d(0, 0, 0);
+         -o-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
+}
+
+.slick-track
+{
+    position: relative;
+    top: 0;
+    left: 0;
+    display: block;
+}
+.slick-track:before,
+.slick-track:after
+{
+    display: table;
+    content: '';
+}
+.slick-track:after
+{
+    clear: both;
+}
+.slick-loading .slick-track
+{
+    visibility: hidden;
+}
+
+.slick-slide
+{
+    display: none;
+    float: left;
+    height: 100%;
+    min-height: 1px;
+}
+[dir='rtl'] .slick-slide
+{
+    float: right;
+}
+.slick-slide img
+{
+    display: block;
+}
+.slick-slide.slick-loading img
+{
+    display: none;
+}
+.slick-slide.dragging img
+{
+    pointer-events: none;
+}
+.slick-initialized .slick-slide
+{
+    display: block;
+}
+.slick-loading .slick-slide
+{
+    visibility: hidden;
+}
+.slick-vertical .slick-slide
+{
+    display: block;
+    height: auto;
+    border: 1px solid transparent;
+}
+.slick-arrow.slick-hidden {
+    display: none;
+}
+
+
+/***************test****/
+
+#testimonial {
+    background: #f17831;
+    padding: 40px 0;
+    color: #fff;
+}
+#testimonial p {
+    margin: 0;
+}
+
+.news-letter-wrapper {
+    background: #f4fbf7;
+    border-radius: 20px;
+    margin: 40px 0;
+    width: 60%;
+    margin: 40px auto;
+    padding: 30px 80px;
+    position: relative;
+    overflow: hidden;
+}
+.align-left {
+    text-align: left;
+}
+
+.news-letter-wrapper p {
+    color: #ddd;
+}
+button {
+    border: navajowhite;
+    background: #f17831;
+    color: #fff;
+    height: 40px;
+    padding: 0 20px;
+    font-size: 16px;
+    border-radius: 5px;
+}
+input[type="text"] {
+    height: 40px;
+    padding: 0 20px;
+    width: 310px;
+    border: 1px solid #eee;
+}
+.orange-circle {
+    background: #f17831;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    position: absolute;
+    left: -41px;
+    top: -30px;
+}
+
+section#footer {
+    background: #231c2a;
+    color: #fff;
+    padding: 60px 0;
+}
+.about-us-block p {
+    width: 200px;
+}
+
+.social-links img {
+    width: 16px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.social-links li {
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+    background: #f17831;
+    border-radius: 50%;
+    margin-right: 5px;
+    text-align: center;
+    position: relative;
+}
+.social-links {
+    padding: 0;
+    margin: 0;
+}
+.social-links li:first-child img {
+    width: 10px;
+}
+
+.video-section-wrapper .video-js .vjs-big-play-button {
+    font-size: 3em;
+    line-height: 1.5em;
+    height: 5rem;
+    width: 5rem;
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    padding: 0;
+    cursor: pointer;
+    opacity: 1;
+    border: 2px solid #fff;
+    background-color: #f17831;
+    border-radius: 50%;
+    background-color: #f17831;
+    border-radius: 50%;
+    transition: all 0.4s;
+    transform: translate(-50%, -50%);
+}
+.video-section-wrapper .vjs-playing .vjs-big-play-button {
+    display: none;
+}
+.video-section-wrapper .vjs-big-play-button .vjs-icon-placeholder:before {
+    position: absolute;
+    top: 70%;
+    left: 50%;
+    width: 100%;
+    height: 100%;
+    transform: translate(-50%, -50%);
+}
